test/typeerrors/Strategies/Duplicated2.type

             x :: a ;
  -------------------------
        x +++ x :: Int;;
     
a == Int : "linkerkant moet een Int zijn";
